[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyZUnivers_MalikAza"
version = "0.0.1"
authors = [
    { name="MalikAza", email="dakota742009@gmail.com" }
]
description = "ZUnivers API python wrapper"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/MalikAza/pyZUnivers"
"Bug Tracker" = "https://github.com/MalikAza/pyZUnivers/issues"