[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyZUnivers"
version = "0.0.4"
authors = [
    { name="MalikAza", email="dakota742009@gmail.com" }
]
description = "ZUnivers API python wrapper"
readme = "README.md"
keywords = ["zunivers", "zerator", "api", "wrapper", "python"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    'requests >= 2.31'
]

[project.urls]
"Homepage" = "https://github.com/MalikAza/pyZUnivers"
"Bug Tracker" = "https://github.com/MalikAza/pyZUnivers/issues"